--- a/css/site.css
+++ b/css/site.css
@@ -1,9 +1,9 @@
 :root {
-    --primary-color: #1d5888;
+    --primary-color: #881d1d;
     --secondary-color: #c76b08;
     --dark-color: #292929;
     --white-color: #ffffff;
-    --h-color: #87bde3;
+    --h-color: #f16c24;
     --checklist: rgb(255, 102, 0); 
 
 }
